<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ChatActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="@color/ChatActv_backgroundTollbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/myapptv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ChatActv_TvApp"
                android:textSize="@dimen/ChatActv_TvSize"
                android:textColor="@color/white"
                android:textStyle="bold">

            </TextView>

        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/include"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:tabTextColor="@color/ChatActv_backgroundTv"
        app:tabSelectedTextColor="@color/white"
        android:background="@color/ChatActv_backround"
        app:tabIndicatorHeight="@dimen/ChatActv_tabIndicatorHeight"
        android:layout_marginTop="@dimen/ChatActv_margtoptoolbar"
        android:layout_below="@+id/toolbar"

        >


        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ChatActv_TvToolbarChat"
            android:id="@+id/Chat">

        </com.google.android.material.tabs.TabItem>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ChatActv_TvTollbarStatus"
            android:id="@+id/Status">

        </com.google.android.material.tabs.TabItem>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ChatActv_TvTollbarCalls"
            android:id="@+id/Calls">

        </com.google.android.material.tabs.TabItem>



    </com.google.android.material.tabs.TabLayout>


    <androidx.viewpager.widget.ViewPager
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/ChatActv_margtopviewpager"
        android:layout_below="@+id/include"
        android:id="@+id/Fragment_Container"
        >

    </androidx.viewpager.widget.ViewPager>






</RelativeLayout>