<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".OTP_Autentication">




    <ImageView
        android:layout_width="@dimen/OTP_Autenication_Width_hightImg"
        android:layout_height="@dimen/OTP_Autenication_Width_hightImg"
        android:src="@drawable/ic_launcher_background"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/OTP_Autenication_MargTop"
        android:id="@+id/logo">

    </ImageView>
    <TextView
        android:id="@+id/Text_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OTP_Autenication_CodeOTP"
        android:textSize="@dimen/MainActivity_TextColorOTP"
        android:textAlignment="center"
        android:textStyle="bold"
        android:padding="@dimen/OTP_Autenication_SizePadding"
        android:textColor="@color/Mainactivity_textcolor"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        >

    </TextView>

    <EditText
        android:id="@+id/Get_Code"
        android:layout_width="@dimen/OTP_AutenicationTv_Width_hightEditTv"
        android:layout_height="@dimen/MainActivity_CountryCodeSize"
        android:layout_marginStart="@dimen/OTP_AutenicationTv_MargStrEndCode"
        android:layout_marginEnd="@dimen/OTP_AutenicationTv_MargStrEndCode"
        android:layout_below="@+id/Text_heading"
        android:layout_centerHorizontal="true"
        android:hint="@string/OTP_AutenicationTv_OTP"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:inputType="number">

    </EditText>


    <TextView
        android:id="@+id/Change_Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OTP_AutenicationTv_OTPCode"
        android:textColor="@color/black"
        android:textSize="@dimen/OTP_AutenicationTv_SizeTv_Code"
        android:layout_below="@+id/Get_Code"
        android:layout_marginTop="@dimen/OTP_AutenicationTv_MargTopCode"
        android:layout_centerHorizontal="true"
        >

    </TextView>


    <android.widget.Button
        android:id="@+id/VerfyCode_Btn"
        android:layout_width="wrap_content"
        android:layout_below="@+id/Change_Number"
        android:layout_height="@dimen/MainActivity_HightWidgetbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/OTP_Autenication_MargTop_CodeBtn"
        android:layout_marginStart="@dimen/OTP_AutenicationTv_MargStrEnd_CodeBtn"
        android:layout_marginEnd="@dimen/OTP_AutenicationTv_MargStrEnd_CodeBtn"
        android:background="@color/OTP_Autenication_backgroundBtn"
        android:text="@string/OTP_AutenicationTv_Btn"
        android:textColor="@color/white"
        android:textAllCaps="false"
        >

    </android.widget.Button>

    <ProgressBar
        android:id="@+id/ProgressBarOfOTPAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/VerfyCode_Btn"
        android:layout_marginTop="@dimen/OTP_Autenication_MargTop"
        android:visibility="invisible">

    </ProgressBar>





</RelativeLayout>